2006-10-15  Timothy Brownawell  <tbrownaw@gmail.com>

	Propagate the rerwite of 'automate stdio' (in branch
	...automate-stdio-extensions) to mainline. It doesn't actually
	have any extensions anymore, just a rewrite that should make
	the code cleaner.

2006-10-13  Timothy Brownawell  <tbrownaw@gmail.com>

	Revert automate stdio extensions (never were on mainline) so
	that the only change is that automate stdio is implemented
	more cleanly.

2006-10-12  Thomas Keller <me@thomaskeller.biz>

	* automate.cc: replaced std::endl in favour of simple unix
	unix line endings which is useful if these commands are used
	over automate stdio (flushing is expensive...)

2006-10-03  Evan Deaubl  <evan@warpedview.com>

	* monotone.cc, options_list.hh: Added ability to specify
	multiple --message arguments.
	* monotone.texi: Added documentation for multiple --message
	arguments.
	* tests/multiple_message_commit/__driver__.lua, testsuite.lua:
	Added integration test for multiple --message arguments.
	
2006-10-09  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 35 fuzzies cleared,

2006-10-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: Fix automate inventory.
	"workspace_inventory" test should be named "automate_inventory".

2006-10-03  Timothy Brownawell  <tbrownaw@gmail.com>

	* visualc/lua.vcproj visualc/monotone.vcproj: Make it build again.

2006-09-29  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/workspace_inventory/__driver__.lua: This test has been
	broken since efe5767b8eebbc5440f543a08b8a3521e760a02a ; added files
	should also be marked as patched.

2006-09-26  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-notify.pl: Change the default monotone program
	from "monotone" to "mtn".

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_netsync.cc (CMD(push/sync)): don't require a -k
    argument for a non-authed transport.

2006-09-26  Matt Johnston  <matt@ucc.asn.au>

	* cmd_ws_commit.cc (CMD(commit)): fail early if a key
	wasn't set.
