@@ -12,7 +12,9 @@
 
 #include "transforms.hh"
 #include "simplestring_xform.hh"
+#include "localized_file_io.hh"
 #include "charset.hh"
+#include "diff_patch.hh"
 #include "inodeprint.hh"
 #include "cert.hh"
 #include "ui.hh"
@@ -24,6 +26,8 @@
 #endif
 
 using std::cin;
+using std::map;
+using std::ostream;
 using std::pair;
 using std::set;
 using std::string;
@@ -473,6 +477,165 @@ process_commit_message_args(bool & given,
   else
     given = false;
 }
+
+void
+do_external_diff(cset const & cs,
+                 app_state & app,
+                 bool new_is_archived)
+{
+  for (map<split_path, pair<file_id, file_id> >::const_iterator
+         i = cs.deltas_applied.begin();
+       i != cs.deltas_applied.end(); ++i)
+    {
+      data data_old;
+      data data_new;
+
+      file_data f_old;
+      app.db.get_file_version(delta_entry_src(i), f_old);
+      data_old = f_old.inner();
+
+      if (new_is_archived)
+        {
+          file_data f_new;
+          app.db.get_file_version(delta_entry_dst(i), f_new);
+          data_new = f_new.inner();
+        }
+      else
+        {
+          read_localized_data(file_path(delta_entry_path(i)),
+                              data_new, app.lua);
+        }
+
+      bool is_binary = false;
+      if (guess_binary(data_old()) ||
+          guess_binary(data_new()))
+        is_binary = true;
+
+      app.lua.hook_external_diff(file_path(delta_entry_path(i)),
+                                 data_old,
+                                 data_new,
+                                 is_binary,
+                                 app.diff_args_provided,
+                                 app.diff_args(),
+                                 delta_entry_src(i).inner()(),
+                                 delta_entry_dst(i).inner()());
+    }
+}
+
+void
+dump_diffs(cset const & cs,
+           app_state & app,
+           bool new_is_archived,
+           ostream & output,
+           set<split_path> const & paths,
+           bool limit_paths)
+{
+  // 60 is somewhat arbitrary, but less than 80
+  string patch_sep = string(60, '=');
+
+  for (map<split_path, file_id>::const_iterator
+         i = cs.files_added.begin();
+       i != cs.files_added.end(); ++i)
+    {
+      if (limit_paths && paths.find(i->first) == paths.end())
+        continue;
+
+      output << patch_sep << "\n";
+      data unpacked;
+      vector<string> lines;
+
+      if (new_is_archived)
+        {
+          file_data dat;
+          app.db.get_file_version(i->second, dat);
+          unpacked = dat.inner();
+        }
+      else
+        {
+          read_localized_data(file_path(i->first),
+                              unpacked, app.lua);
+        }
+
+      std::string pattern("");
+      if (app.diff_show_encloser)
+        app.lua.hook_get_encloser_pattern(file_path(i->first),
+                                          pattern);
+
+      make_diff(file_path(i->first).as_internal(),
+                file_path(i->first).as_internal(),
+                i->second,
+                i->second,
+                data(), unpacked,
+                output, app.diff_format, pattern);
+    }
+
+  map<split_path, split_path> reverse_rename_map;
+
+  for (map<split_path, split_path>::const_iterator
+         i = cs.nodes_renamed.begin();
+       i != cs.nodes_renamed.end(); ++i)
+    {
+      reverse_rename_map.insert(make_pair(i->second, i->first));
+    }
+
+  for (map<split_path, pair<file_id, file_id> >::const_iterator
+         i = cs.deltas_applied.begin();
+       i != cs.deltas_applied.end(); ++i)
+    {
+      if (limit_paths && paths.find(i->first) == paths.end())
+        continue;
+
+      file_data f_old;
+      data data_old, data_new;
+
+      output << patch_sep << "\n";
+
+      app.db.get_file_version(delta_entry_src(i), f_old);
+      data_old = f_old.inner();
+
+      if (new_is_archived)
+        {
+          file_data f_new;
+          app.db.get_file_version(delta_entry_dst(i), f_new);
+          data_new = f_new.inner();
+        }
+      else
+        {
+          read_localized_data(file_path(delta_entry_path(i)),
+                              data_new, app.lua);
+        }
+
+      split_path dst_path = delta_entry_path(i);
+      split_path src_path = dst_path;
+      map<split_path, split_path>::const_iterator re;
+      re = reverse_rename_map.find(dst_path);
+      if (re != reverse_rename_map.end())
+        src_path = re->second;
+
+      std::string pattern("");
+      if (app.diff_show_encloser)
+        app.lua.hook_get_encloser_pattern(file_path(src_path),
+                                          pattern);
+
+      make_diff(file_path(src_path).as_internal(),
+                file_path(dst_path).as_internal(),
+                delta_entry_src(i),
+                delta_entry_dst(i),
+                data_old, data_new,
+                output, app.diff_format, pattern);
+    }
+}
+
+void
+dump_diffs(cset const & cs,
+           app_state & app,
+           bool new_is_archived,
+           ostream & output)
+{
+  set<split_path> dummy;
+  dump_diffs(cs, app, new_is_archived, output, dummy);
+}
+
 
 // Local Variables:
 // mode: C++
